--- a/frontend/src/Pages/Home/home.css
+++ b/frontend/src/Pages/Home/home.css
@@ -1,17 +1,26 @@
-.home {
-  background-color: #212529;
+/* .home {
+  background-color: bisque;
   color: white;
-
   position: relative;
-}
-
+} */
+/* 
 .container {
   width: 100%;
   max-width: 1024px;
   margin: 0px 0px 40px 0px;
   background-color: #212529;
+} */
+.homePage {
+  background-image: url(../../assets/city.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
-
+.col {
+  border: solid 1px white;
+}
+/* 
 .searchBtn {
   background-color: #febb02;
   color: white;
@@ -33,7 +42,7 @@
   border-radius: 5px;
   position: absolute;
   bottom: -25px;
-  width: 100%;
+  width: 30%;
   max-width: 1024px;
 }
 
@@ -55,14 +64,14 @@
 .searchText {
   color: lightgray;
   cursor: pointer;
-}
-
+} */
+/* 
 .date {
   position: absolute;
   top: 50px;
   z-index: 2;
-}
-
+} */
+/* 
 .options {
   z-index: 2;
   position: absolute;
@@ -72,9 +81,9 @@
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
-}
+} */
 
-.optionItem {
+/* .optionItem {
   width: 200px;
   display: flex;
   justify-content: space-between;
@@ -100,4 +109,4 @@
 
 .optionCounterButton:disabled {
   cursor: not-allowed;
-}
+} */
