--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -1,4 +1,29 @@
-.footer {
-  height: 15vh;
-  background-color: green;
+.footer-container {
+  background-color: bisque;
+  padding: 2rem 0.5rem;
 }
+.ft1 h2 {
+  font-weight: 600;
+  font-family: cursive;
+}
+.row h2 {
+  font-family: cursive;
+}
+.footer-icos p {
+  padding: 0.5rem;
+  font-size: 2rem;
+}
+ul,
+li {
+  font-weight: 500;
+  padding: 5px;
+}
+/* .list {
+  padding: 1rem;
+}
+.row {
+  padding-left: 2rem;
+}
+.ft1 {
+  padding-left: 5rem;
+} */
