--- a/frontend/src/Pages/Home/home.css
+++ b/frontend/src/Pages/Home/home.css
@@ -1,15 +1,3 @@
-/* .home {
-  background-color: bisque;
-  color: white;
-  position: relative;
-} */
-/* 
-.container {
-  width: 100%;
-  max-width: 1024px;
-  margin: 0px 0px 40px 0px;
-  background-color: #212529;
-} */
 .homePage {
   background-image: url(../../assets/city.jpg);
   background-position: center;
@@ -17,38 +5,99 @@
   width: 100vw;
   height: 100vh;
 }
-.col {
-  border: solid 1px white;
+.input {
+  border: 3px solid #febb02;
+  border-radius: 5px;
+  height: 40px;
 }
-/* 
+
+.searchText {
+  color: lightgray;
+  cursor: pointer;
+}
+
 .searchBtn {
   background-color: #febb02;
   color: white;
-  font-weight: 500;
+  font-weight: 600;
   border: none;
   padding: 10px;
   cursor: pointer;
   border-radius: 5px;
 }
-
-.search {
-  height: 60px;
-  background-color: white;
-  border: 3px solid #febb02;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 10px 0px;
-  border-radius: 5px;
-  position: absolute;
-  bottom: -25px;
-  width: 30%;
-  max-width: 1024px;
-}
-
 .icon {
-  color: lightgray;
+  color: rgb(68, 67, 58);
+  font-size: 30px;
+  margin: 5px;
+  padding-top: 10px;
 }
+/* ----> HEADER TEXT  <-------*/
+.animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  /* text-fill-color: transparent; */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 4s linear infinite;
+  display: inline-block;
+  font-size: 60px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+/* ----> EARTH ANIMATION <-------*/
+.earth {
+  background: url(https://cdn.rawgit.com/ManzDev/cursos-assets/gh-pages/css3/earth-2.jpg);
+  background-size: cover;
+  border: 2px solid #000;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  animation: movimiento 8s linear 0s infinite;
+  box-shadow: 0 0 25px RGBA(255, 255, 255, 0.1), -8px -8px 15px #000 inset,
+    2px 2px 25px #000 inset, -45px -45px 25px RGBA(0, 0, 0, 0.5) inset,
+    25px 25px 45px RGBA(0, 0, 0, 0.45) inset;
+  margin: 4em auto;
+  transform: rotateX(5deg) rotateY(5deg) rotateZ(5deg);
+}
+
+@keyframes movimiento {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 355px 0;
+  }
+}
+
+@keyframes stars {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 0 100%;
+  }
+}
+
+/* 
+
+
+
+
 
 .searchItem {
   display: flex;
@@ -56,10 +105,7 @@
   gap: 10px;
 }
 
-.searchInput {
-  border: none;
-  outline: none;
-}
+
 
 .searchText {
   color: lightgray;
