--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -18,12 +18,9 @@ li {
   font-weight: 500;
   padding: 5px;
 }
-/* .list {
-  padding: 1rem;
+.underline {
+  height: 04px;
+  width: 17rem;
+  background-color: rgb(77, 75, 64);
+  margin-bottom: 10px;
 }
-.row {
-  padding-left: 2rem;
-}
-.ft1 {
-  padding-left: 5rem;
-} */
